Fix YAML header

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
 title: ConEmu - Handy Windows Terminal
 
-description: >
-  ConEmu-Maximus5 is a full-featured local terminal for Windows devs, admins and users.
-  Get better console window with tabs, splits, Quake style, copy+paste, DosBox and PuTTY integration, and much more.
+description: "ConEmu-Maximus5 is a full-featured local terminal for Windows devs, admins and users.
+  Get better console window with tabs, splits, Quake style, copy+paste, DosBox and PuTTY integration, and much more."
 
 og_image: http://conemu.github.io/img/ConEmu-Maximus5.png
 ---
