--- a/donate.html
+++ b/donate.html
@@ -33,7 +33,7 @@ or anything else, spreading the word for example. </p>
 
 <h2><a name="funding"></a>PayPal<a href="#funding" class="section_anchor"></a></h2>
 <div class="text">If you can't use <a href="#yandex">Yandex.Money</a> or other methods please contact me by<br>
-e-mail <img style="position: relative; top: 0.25em;" src="./img/email.png"> or twitter <a href="https://twitter.com/ConEmuMaximus5">@ConEmuMaximus5</a>
+e-mail <img style="position: relative; top: 0.25em;" src="/img/email.png"> or twitter <a href="https://twitter.com/ConEmuMaximus5">@ConEmuMaximus5</a>
 <br>and I will send you my dedicated PayPal address in response,<br>
 which may be used for ‘sending money to family or friends’.</div>
 <div class="text">That is because PayPal <strong>donations</strong> are not accepted to Russian accounts,<br>
@@ -47,14 +47,14 @@ or you may suggest other methods there.</div>
 AFAIK coinbase allows payments from linked Visa cards with US billing address.</div>  
 <div class="text">BTC: <a href="bitcoin:1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc?label=ConEmu-Maximus5&message=Support%20ConEmu%20development">1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc</a></div>
 <div><img
-	src="./img/bitcoin-qr.png" alt="bitcoin:1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc" title="Contribute via Bitcoin"
+	src="/img/bitcoin-qr.png" alt="bitcoin:1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc" title="Contribute via Bitcoin"
 	border="0"></img></div>
 
 <h2><a href="https://flattr.com/">Flattr microdonations</a></h2>
 <div class="text stext"><a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808#c6">What is a Flattr and how it works</a>.</div>
 <div class="text">
 	<a href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub"><img
-	src="./img/FlattrBadgeLarge.png" alt="Flattr ConEmu" title="Flattr ConEmu"
+	src="/img/FlattrBadgeLarge.png" alt="Flattr ConEmu" title="Flattr ConEmu"
 	border="0"></img></a></div>
 
 <h2><a href="http://www.wmtransfer.com/">WebMoney transfer</a></h2>
