Update screenshot links

--- a/en/Settings.html
+++ b/en/Settings.html
@@ -74,25 +74,34 @@ description: "Where the settings are stored, Settings dialog description, conver
 <a name="screenshots"></a>
 
 <h2><a name="Main"></a>Main<a href="#Main" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsMain.png" title="ConEmu settings, Main page" alt="ConEmu settings, Main page"> </p>
+<p><img src="/img/Settings-Main.png" title="ConEmu settings, Main page" alt="ConEmu settings, Main page"> </p>
 
 <h2><a name="Size_and_Pos"></a>Size and Pos<a href="#Size_and_Pos" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsSizeAndPos.png" title="ConEmu settings, Size and position page" alt="ConEmu settings, Size and position page"> </p>
+<p><img src="/img/Settings-SizePos.png" title="ConEmu settings, Size and position page" alt="ConEmu settings, Size and position page"> </p>
 
 <h2><a name="Appearance"></a>Appearance<a href="#Appearance" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsAppearance.png" title="ConEmu settings, Appearance page" alt="ConEmu settings, Appearance page"> </p>
+<p><img src="/img/Settings-Appearance.png" title="ConEmu settings, Appearance page" alt="ConEmu settings, Appearance page"> </p>
+
+<h2><a name="Background"></a>Background<a href="#Background" class="section_anchor"></a></h2>
+<p><img src="/img/Settings-Background.png" title="ConEmu settings, Background page" alt="ConEmu settings, Background page"> </p>
+
+<h2><a name="Tabs"></a>Tabs<a href="#Tabs" class="section_anchor"></a></h2>
+<p><img src="/img/Settings-TabBar.png" title="ConEmu settings, Tabs page" alt="ConEmu settings, Tabs page"> </p>
+
+<h2><a name="Confirm"></a>Confirm<a href="#Confirm" class="section_anchor"></a></h2>
+<p><img src="/img/Settings-Confirm.png" title="ConEmu settings, Confirm page" alt="ConEmu settings, Confirm page"> </p>
 
 <h2><a name="Task_bar"></a>Task bar<a href="#Task_bar" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsTaskBar.png" title="ConEmu settings, Task bar page" alt="ConEmu settings, Task bar page"> </p>
+<p><img src="/img/Settings-TaskBar.png" title="ConEmu settings, Task bar page" alt="ConEmu settings, Task bar page"> </p>
 
 <h2><a name="Automatic_update"></a>Automatic update<a href="#Automatic_update" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsUpdate.png" title="ConEmu settings, Update page" alt="ConEmu settings, Update page"> </p>
+<p><img src="/img/Settings-Update.png" title="ConEmu settings, Update page" alt="ConEmu settings, Update page"> </p>
 
 <h2><a name="Startup"></a>Startup<a href="#Startup" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsStartup.png" title="ConEmu settings, Startup page" alt="ConEmu settings, Startup page"> </p>
+<p><img src="/img/Settings-Startup.png" title="ConEmu settings, Startup page" alt="ConEmu settings, Startup page"> </p>
 
 <h2><a name="Tasks"></a>Tasks<a href="#Tasks" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsTasks.png" title="ConEmu settings, Tasks page" alt="ConEmu settings, Tasks page"> </p>
+<p><img src="/img/Settings-Tasks.png" title="ConEmu settings, Tasks page" alt="ConEmu settings, Tasks page"> </p>
 <p>Here you can configure a list of common tasks. In fact, this is an alias to run one or more applications in new tabs within ConEmu. These can be configured in the &#x27;Tasks&#x27; page of the &#x27;Settings&#x27; dialog, and stored in the &quot;Tasks&quot; subkey of reg/xml settings. &#x27;Tasks&#x27; may be used as follows (as an example, we will use a task named {Shells}): <ul><li>when you start by specifying the properties of the shortcut: &quot;ConEmu.exe / cmd {Shells}&quot;; </li>
 <li>specifying {Shells} in the &#x27;Command line&#x27; page &#x27;Main&#x27; of &#x27;Settings&#x27; dialog; </li>
 <li>when you create a new console interface ConEmu (<code class="plus">[+]</code> on the toolbar, a list of Recreate-dialog); </li>
@@ -105,59 +114,73 @@ description: "Where the settings are stored, Settings dialog description, conver
 <p>После настройки списка задач включите флажок «Add ConEmu tasks to taskbar» и (по желанию) «Add commands from history, too». Нажмите кнопку «Update Now!». В случае успеха вы увидите сообщение «Taskbar jump list was updated successfully», ну или сообщение об ошибке. Есть способ инициировать Jump list при запуске ConEmu (<a title="Jump Lists/Task window problem" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=576">Issue 576&nbsp;</a>, может кому еще понадобится для автоматизации установки, например) для этого запустите (однократно) ConEmu.exe с аргументом &quot;<code>/updatejumplist</code>&quot;. </p>
 
 <h2><a name="ComSpec"></a>ComSpec<a href="#ComSpec" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsComspec.png" title="ConEmu settings, Comspec page" alt="ConEmu settings, Comspec page"> </p>
+<p><img src="/img/Settings-Comspec.png" title="ConEmu settings, Comspec page" alt="ConEmu settings, Comspec page"> </p>
 
 <h2><a name="Features"></a>Features<a href="#Features" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsFeatures.png" title="ConEmu settings, Features page" alt="ConEmu settings, Features page"> </p>
+<p><img src="/img/Settings-Features.png" title="ConEmu settings, Features page" alt="ConEmu settings, Features page"> </p>
 
 <h3><a name="RealConsole_font"></a>RealConsole font<a href="#RealConsole_font" class="section_anchor"></a></h3>
-<p>Open this dialog from <a href="SettingsFeatures.html">Features page</a> <code>-&gt;</code> button ‘<code>...</code>’ on the right of ‘Show real console’<br> <img src="../img/SettingsMoreRealFont.png" title="ConEmu settings, RealConsole font" alt="ConEmu settings, RealConsole font"> </p>
+<p><img src="/img/Settings-More-RealFont.png" title="ConEmu settings, RealConsole font" alt="ConEmu settings, RealConsole font"> </p>
 
 <h2><a name="Text_cursor"></a>Text cursor<a href="#Text_cursor" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsTextCursor.png" title="ConEmu settings, Text cursor page" alt="ConEmu settings, Text cursor page"> </p>
+<p><img src="/img/Settings-TextCursor.png" title="ConEmu settings, Text cursor page" alt="ConEmu settings, Text cursor page"> </p>
 
 <h2><a name="Colors"></a>Colors<a href="#Colors" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsColors.png" title="ConEmu settings, Colors page" alt="ConEmu settings, Colors page"> </p>
-<p><img src="../img/SettingsColors2.png" title="ConEmu settings, Colors page" alt="ConEmu settings, Colors page"> </p>
+<p><img src="/img/Settings-Colors.png" title="ConEmu settings, Colors page" alt="ConEmu settings, Colors page"> </p>
+<p><img src="/img/Settings-Colors2.png" title="ConEmu settings, Predefines palettes" alt="ConEmu settings, Predefines palettes"> </p>
 
 <h2><a name="Transparency"></a>Transparency<a href="#Transparency" class="section_anchor"></a></h2>
-<p><a href="SettingsTransparency.html">Read more</a><br> <img src="../img/SettingsTransparency.png" title="ConEmu settings, Transparency page" alt="ConEmu settings, Transparency page"> </p>
-
-<h2><a name="Tabs"></a>Tabs<a href="#Tabs" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsTabs.png" title="ConEmu settings, Tabs page" alt="ConEmu settings, Tabs page"> </p>
+<p><a href="SettingsTransparency.html">Read more</a> </p>
+<p><img src="/img/Settings-Transparency.png" title="ConEmu settings, Transparency page" alt="ConEmu settings, Transparency page"> </p>
 
 <h2><a name="Status_bar"></a>Status bar<a href="#Status_bar" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsStatus.png" title="ConEmu settings, Status bar page" alt="ConEmu settings, Status bar page"> </p>
-
-<h2><a name="Integration"></a>Integration<a href="#Integration" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsIntegration.png" title="ConEmu settings, Integration page" alt="ConEmu settings, Integration page"> </p>
+<p><img src="/img/Settings-StatusBar.png" title="ConEmu settings, Status bar page" alt="ConEmu settings, Status bar page"> </p>
 
 <h2><a name="App_distinct"></a>App distinct<a href="#App_distinct" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsDistinct.png" title="ConEmu settings, App distinct page" alt="ConEmu settings, App distinct page"> </p>
-<p><img src="../img/SettingsDistinct2.png" title="ConEmu settings, App distinct page" alt="ConEmu settings, App distinct page"> </p>
+<p><img src="/img/Settings-AppDistinct.png" title="ConEmu settings, App distinct page" alt="ConEmu settings, App distinct page"> </p>
+<p><img src="/img/Settings-AppDistinct2.png" title="ConEmu settings, App distinct page" alt="ConEmu settings, App distinct page"> </p>
+<p><img src="/img/Settings-AppDistinct3.png" title="ConEmu settings, App distinct page" alt="ConEmu settings, App distinct page"> </p>
+
+<h2><a name="Integration"></a>Integration<a href="#Integration" class="section_anchor"></a></h2>
+<p><img src="/img/Settings-Integration.png" title="ConEmu settings, Integration page" alt="ConEmu settings, Integration page"> </p>
+
+<h2><a name="Default_term"></a>Default Terminal<a href="#Default_term" class="section_anchor"></a></h2>
+<p><a href="DefaultTerminal.html">Go to description</a> </p>
+<p><img src="/img/Settings-DefTerm.png" title="ConEmu settings, DefTerm page" alt="ConEmu settings, DefTerm page"> </p>
 
 <h2><a name="Keys_and_Macro"></a>Keys and Macro<a href="#Keys_and_Macro" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsKeys.png" title="ConEmu settings, Keys and Macro page" alt="ConEmu settings, Keys and Macro page"> </p>
+<p><img src="/img/Settings-Hotkeys.png" title="ConEmu settings, Keys and Macro page" alt="ConEmu settings, Keys and Macro page"> </p>
+<p><img src="/img/Settings-Hotkeys2.png" title="ConEmu settings, Few GuiMacros" alt="ConEmu settings, Few GuiMacros"> </p>
 
 <h2><a name="Controls"></a>Controls<a href="#Controls" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsControls.png" title="ConEmu settings, Controls page" alt="ConEmu settings, Controls page"> </p>
+<p><img src="/img/Settings-Controls.png" title="ConEmu settings, Controls page" alt="ConEmu settings, Controls page"> </p>
 
-<h2><a name="Mark_&amp;_Paste"></a>Mark &amp; Paste<a href="#Mark_&amp;_Paste" class="section_anchor"></a></h2>
+<h2><a name="Mark_and_Copy"></a>Mark and Copy<a href="#Mark_and_Copy" class="section_anchor"></a></h2>
 <p><a href="TextSelection.html">Go to description</a> </p>
-<p><img src="../img/SettingsSelection.png" title="ConEmu settings, Text selection" alt="ConEmu settings, Text selection"> </p>
-<p><!-- ===Hide caption details===&lt;img src=&quot;http://conemu-maximus5.googlecode.com/svn/files/SettingsMoreHideCaption.png&quot; title=&quot;ConEmu settings, Hide caption details&quot; alt=&quot;ConEmu settings, Hide caption details&quot;&gt; --> </p>
+<p><img src="/img/Settings-MarkCopy.png" title="ConEmu settings, Text selection" alt="ConEmu settings, Text selection"> </p>
+
+<h2><a name="Paste"></a>Paste<a href="#Paste" class="section_anchor"></a></h2>
+<p><img src="/img/Settings-Paste.png" title="ConEmu settings, Paste page" alt="ConEmu settings, Paste page"> </p>
+
+<h2><a name="Highlight"></a>Highlight<a href="#Highlight" class="section_anchor"></a></h2>
+<p><img src="/img/Settings-Highlight.png" title="ConEmu settings, Highlight page" alt="ConEmu settings, Highlight page"> </p>
 
 <h2><a name="Far_Manager"></a>Far Manager<a href="#Far_Manager" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsFarManager.png" title="ConEmu settings, Far Manager page" alt="ConEmu settings, Far Manager page"> </p>
+<p><img src="/img/Settings-Far.png" title="ConEmu settings, Far Manager page" alt="ConEmu settings, Far Manager page"> </p>
 
-<h2><a name="Views"></a>Views<a href="#Views" class="section_anchor"></a></h2>
-<p>This is settings for &#x27;Panel Views&#x27; Far Manager plugin. <img src="../img/SettingsViews.png" title="ConEmu settings, Views page" alt="ConEmu settings, Views page"> </p>
+<h2><a name="Far_macros"></a>Far macros<a href="#Far_macros" class="section_anchor"></a></h2>
+<p><img src="/img/Settings-Far-Macros.png" title="ConEmu settings, Far macros page" alt="ConEmu settings, Far macros page"> </p>
+
+<h2><a name="Far_Views"></a>Far Views<a href="#Far_Views" class="section_anchor"></a></h2>
+<p>This is settings for ‘Panel Views’ Far Manager plugin. </p>
+<p><img src="/img/Settings-Far-View.png" title="ConEmu settings, Views page" alt="ConEmu settings, Views page"> </p>
 
 <h2><a name="Info"></a>Info<a href="#Info" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsInfo.png" title="ConEmu settings, Info page" alt="ConEmu settings, Info page"> </p>
+<p><img src="/img/Settings-Info.png" title="ConEmu settings, Info page" alt="ConEmu settings, Info page"> </p>
 
 <h2><a name="Debug"></a>Debug<a href="#Debug" class="section_anchor"></a></h2>
-<p>Enables advanced logging of console processes creation. <img src="../img/SettingsDebug.png" title="ConEmu settings, Debug page" alt="ConEmu settings, Debug page"> </p>
+<p>Enables advanced logging of console processes creation, ANSI output and keypresses. </p>
+<p><img src="/img/Settings-Debug.png" title="ConEmu settings, Debug page" alt="ConEmu settings, Debug page"> </p>
 
 <h1><a name="Alphabetical"></a>Alphabetical<a href="#Alphabetical" class="section_anchor"></a></h1>
 <p><table class="wikitable">
