--- a/en/SettingsIntegration.html
+++ b/en/SettingsIntegration.html
@@ -23,7 +23,7 @@ title: "ConEmu | Settings › Integration page"
 <p>To pop up ConEmu ‘Tab’ menu - right click on the <code class="plus">[+]</code> item in the ConEmu status bar. </p>
 
 <h2><a name="‘Integration’_page_items_description"></a>‘Integration’ page items description<a href="#‘Integration’_page_items_description" class="section_anchor"></a></h2>
-<p><img src="../img/SettingsIntegration2.png" title="Integration page items description"> </p>
+<p><img src="/img/Settings-Integration2.png" title="Integration page items description"> </p>
 
 <h3><a name="Menu_item"></a>Menu item<a href="#Menu_item" class="section_anchor"></a></h3>
 <p>What you will see in the Explorer popup menu. You can use <code>&amp;</code> sign to set hotkey for the menu item. For example, register <code>ConEmu &amp;Here</code> and you can press Alt+H to run it from keyboard. Of course, you need to pop up menu first. There is no way to register ‘global’ shortcut for these methods. </p>
