--- a/ru/AnsiEscapeCodes.html
+++ b/ru/AnsiEscapeCodes.html
@@ -124,7 +124,7 @@ if &quot;%ConEmuANSI%&quot;==&quot;OFF&quot; echo Запрещено</pre>
 <h1><a name="Примеры"></a>Примеры<a href="#Примеры" class="section_anchor"></a></h1>
 
 <h2><a name="ANSI_and_xterm_color_maps"></a>ANSI and xterm color maps<a href="#ANSI_and_xterm_color_maps" class="section_anchor"></a></h2>
-<p><img src="../img/ConEmuAnsi.png" title="ANSI X3.64 and Xterm 256 colors in ConEmu"> </p>
+<p><img src="/img/ConEmuAnsi.png" title="ANSI X3.64 and Xterm 256 colors in ConEmu"> </p>
 
 <h3><a name="Xterm_256_color_map"></a>Xterm 256 color map<a href="#Xterm_256_color_map" class="section_anchor"></a></h3>
 <p>Пример из файла: <code>ConEmu\Addons\AnsiColors256.ans</code>. </p>
