--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -14,7 +14,7 @@ breadcrumbs:
 <p>New ConEmu builds arrives often, at least weekly.
 It's recommended to enable <a href="SettingsUpdate.html">Automatic Update</a>
 to get <a href="VersionComparison.html#release-stages">Preview or Alpha</a> builds as soon
-as they will be released.
+as they are released.
 </p>
 
 <h2>Any contributions are appreciated</h2>
