--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -33,6 +33,16 @@ or anything else, spreading the word for example.
 
 <!-- Content starts -->
 
+<h2 id="Build_150420">Build 150420</h2>
+<ul>
+	<li>Warn if MacType hookers are loaded in ConEmuC/ConEmuC64. User have to exclude these processes in the MacType configuration. </li>
+	<li>Allow to quit ConEmu by cross-clicking in the ‘Fast configuration’ dialog. </li>
+	<li>Startup task field was not filled properly in the Fast configuration dialog sometimes. </li>
+	<li>User had to press `Enter` to start find text from SearchBox if the match was above visible area. </li>
+	<li>Clean up ConEmu_Tilde.xml from default settings. </li>
+</ul>
+
+
 <h2 id="Build_150419">Build 150419</h2>
 <ul><li>DefTerm. First VisualStudio debugging session was not processed by DefTerm. </li>
 	<li>Default settings were not applied on first start (suggested startup task). </li>
