Update indexing properties

--- a/en/License_by_Zoin.html
+++ b/en/License_by_Zoin.html
@@ -2,6 +2,8 @@
 redirect_from: /ru/License_by_Zoin.html
 
 title: "ConEmu | Original License by Zoin"
+
+noindex: true
 ---
 
 <!-- Content starts -->
