--- a/sitemap.html
+++ b/sitemap.html
@@ -1,6 +1,7 @@
 ---
 title: ConEmu | SiteMap
 description: List of all ConEmu website pages
+noindex: true
 ---
 
 <h1>List of all ConEmu website pages</h1>
