Update Screenshots page

--- a/en/Screenshots.html
+++ b/en/Screenshots.html
@@ -3,6 +3,8 @@ redirect_from: /ru/Screenshots.html
 
 title: "ConEmu | Screenshots"
 
+description: "Take a look at ConEmu window screenshots"
+
 breadcrumbs:
  - url: TableOfContents.html#conemu
    title: ConEmu
@@ -13,7 +15,7 @@ screenshots:
  - title: "ConEmu and Solarized Git"
    src:    SolarizedGit.png
  - title: "Far, cmd, Notepad and PUTTY started in ConEmu"
-   rc:    ConEmuAero.png
+   src:    ConEmuAero.png
  - title: "PuTTY and notepad in ConEmu splits"
    src:    ConEmuChildGui.png
  - title: "CJK support in ConEmu"
@@ -46,6 +48,8 @@ screenshots:
 
 <h1>ConEmu screenshots</h1>
 
+<p>Take a look at ConEmu window screenshots below. </p>
+<p>Screenshots of Settings dialog are located <a href="Settings.html">here</a>. </p>
 
 {% for img in page.screenshots %}
 <h3>{{ img.title }}</h2>
