--- a/en/SettingsColors.html
+++ b/en/SettingsColors.html
@@ -2,6 +2,12 @@
 redirect_from: /ru/SettingsColors.html
 
 title: "ConEmu | Settings › Colors page"
+
+readalso:
+ - url: SolarizedColors.html
+   title: Solorized scheme hints
+ - url: Xterm256Colors.html
+   title: Xterm-256 Colors
 ---
 
 <!-- Content starts -->
