--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -31,6 +31,15 @@ or anything else, spreading the word for example.
 
 <!-- Content starts -->
 
+<h2 id="Build_150428">Build 150428</h2>
+<ul>
+	<li>Reset <code>FARHOME</code> env.var when creating default {Far} task without full path to <code>far.exe</code>. </li>
+	<li>Default/startup task may be not initialized properly if saved config was partial. </li>
+	<li>Show proper error code in StatusBar if restart console was failed. </li>
+	<li>gh#121: Selecting 'No' when restarting console as admin produced error state. </li>
+</ul>
+
+
 <h2 id="Build_150427">Build 150427</h2>
 <ul>
 	<li>gh#112: Python with Tk: rightclick menu window not showing. </li>
