--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -31,6 +31,17 @@ or anything else, spreading the word for example.
 
 <!-- Content starts -->
 
+<h2 id="Build_150504">Build 150504</h2>
+<ul>
+	<li>Jump list command was built erroneously if there was ‘-FontDir ...’ or some other switch. </li>
+	<li>The field ‘Startup task’ was not filled in the ConEmu Fast Configuration dialog. </li>
+	<li>Fix ChocolateyAbout.cmd script, correct PATH suggestion and powershell command. </li>
+	<li>Check if Chocolatey is already installed and show the path (ChocolateyAbout.cmd). </li>
+	<li>gh#127: ConEmu did not stay minimized if a new console tab was opened in background. </li>
+	<li>gh#106: ChildGui turned black after ConEmu was restored. </li>
+</ul>
+
+
 <h2 id="Build_150428">Build 150428</h2>
 <ul>
 	<li>Reset <code>FARHOME</code> env.var when creating default {Far} task without full path to <code>far.exe</code>. </li>
