--- a/en/Downloads.html
+++ b/en/Downloads.html
@@ -32,25 +32,40 @@ readalso:
 </tr>
 </table>
 
+
 <h3><a name="Official_mirrors"></a>Official mirrors<a href="#Official_mirrors" class="section_anchor"></a></h3>
-<ul><li><a href="http://www.fosshub.com/ConEmu.html" rel="nofollow">Fosshub.com</a> </li>
-<li><a href="https://sourceforge.net/projects/conemu/files/" rel="nofollow">Sourceforge.com</a> </li>
-<li><a href="https://conemu.codeplex.com/releases" rel="nofollow">CodePlex.com</a> </li></ul><p><!--   * [http://code.google.com/p/conemu-maximus5/downloads/list Googlecode.com] - will be [http://google-opensource.blogspot.se/2013/05/a-change-to-google-code-download-service.html broken soon] --> </p>
+<ul>
+	<li><a href="http://www.fosshub.com/ConEmu.html" rel="nofollow">Fosshub.com</a> </li>
+	<li><a href="https://sourceforge.net/projects/conemu/files/" rel="nofollow">Sourceforge.com</a> </li>
+	<li><a href="https://github.com/Maximus5/ConEmu/releases" rel="nofollow">GitHub.com</a> </li>
+</ul>
+
 
 <h3><a name="Third-pary_mirrors"></a>Third-pary mirrors<a href="#Third-pary_mirrors" class="section_anchor"></a></h3>
-<ul><li><a href="http://www.instalki.pl/programy/download/Windows/emulatory/ConEmu.html" rel="nofollow">Instalki.pl</a> </li>
-<li><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow">Softpedia.com</a> </li></ul>
+<p><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow">Softpedia.com</a>,Instalki.pl and some others.
+These mirrors are not maintained by project owners! <p>
+
 
 <h2><a name="Release_archives"></a>Release archives<a href="#Release_archives" class="section_anchor"></a></h2>
 <p>Searching for some old (exact) ConEmu build? All builds are available here: </p>
-<ul><li><a href="http://sourceforge.net/projects/conemu/files/OldReleases/ConEmuPack/" rel="nofollow">Release archives (sourceforge)</a> </li>
-<li><a href="http://www.oldfoss.com/ConEmu.html" rel="nofollow">Release archives (oldfoss)</a> </li></ul>
+<ul>
+	<li><a href="http://sourceforge.net/projects/conemu/files/OldReleases/ConEmuPack/" rel="nofollow">Release archives (sourceforge)</a> </li>
+	<li><a href="http://www.oldfoss.com/ConEmu.html" rel="nofollow">Release archives (oldfoss)</a> </li>
+</ul>
 
 <h2><a name="Far_Manager_related"></a>Far Manager related<a href="#Far_Manager_related" class="section_anchor"></a></h2>
 <p>New plugins adopted to newest Far 3.0 are located now on GitHub </p>
-<ul><li><a href="https://github.com/Maximus5/FarPlugins/releases" rel="nofollow">New plugins for Far 3.0</a> </li></ul><p>Far3bis sources and binaries </p>
-<ul><li><a href="https://github.com/Maximus5/Far3bis" rel="nofollow">Far3bis on GitHub</a> </li>
-<li><a href="https://sourceforge.net/projects/conemu/files/FarManager/Far3bis/" rel="nofollow">Far3bis downloads</a> </li></ul><p>I have not updated yet some plugins released for Far Manager (2.0 and 3.0.2790). Due to breaking changes in Far API (Lua related) old plugins will not be working in the current builds of Far 3.x. But if you need them, you may download them here: </p>
-<ul><li><a href="http://code.google.com/p/conemu-maximus5/downloads/list" rel="nofollow">Old plugins, Far2bis, Far3bis</a> </li></ul>
+<ul>
+	<li><a href="https://github.com/Maximus5/FarPlugins/releases" rel="nofollow">New plugins for Far 3.0</a> </li>
+</ul>
+<p>Far3bis sources and binaries </p>
+<ul>
+	<li><a href="https://github.com/Maximus5/Far3bis" rel="nofollow">Far3bis on GitHub</a> </li>
+	<li><a href="https://sourceforge.net/projects/conemu/files/FarManager/Far3bis/" rel="nofollow">Far3bis downloads</a> </li>
+</ul>
+<p>I have not updated yet some plugins released for Far Manager (2.0 and 3.0.2790). Due to breaking changes in Far API (Lua related) old plugins will not be working in the current builds of Far 3.x. But if you need them, you may download them here: </p>
+<ul>
+	<li><a href="http://code.google.com/p/conemu-maximus5/downloads/list" rel="nofollow">Old plugins, Far2bis, Far3bis</a> </li>
+</ul>
 
 <!-- Content ends -->
