--- a/en/Awards.html
+++ b/en/Awards.html
@@ -6,9 +6,10 @@ title: "ConEmu | Awards"
 noindex: true
 ---
 
-<!-- Content starts -->
+<h1> Awards </h1>
 
-<h3 id="h0"><a name="Awards"></a>Awards<a href="#Awards" class="section_anchor"></a></h3>
+<p><a href="http://sourceforge.net/blog/may-2015-community-choice-project-of-the-month-conemu/">May 2015, “Community Choice” Project of the Month (SourceForge.net)</a>. </p>
+
 <p><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow"><img border="0" src="http://s1.softpedia-static.com/base_img/softpedia_free_award_f.gif"></img></a> <a href="http://www.windows8downloads.com/" rel="nofollow"><img src="http://www.windows8downloads.com/img/awards/award_5.png" alt="Windows 8 Downloads" border="0" width="160" height="80"></img></a> <a href="http://www.downloadatlas.com/" rel="nofollow"><img src="http://www.downloadatlas.com/images/editors_choice.png" width="80" height="80" alt="ConEmu Editor's Choice"></img></a> <a href="http://www.sofotex.com/ConEmu-download_L125596.html" rel="nofollow"><img src="http://www.sofotex.com/img/5stars-sm.jpg" alt="SofoTex.com - Software downloads"></img></a> </p>
 <p><a href="http://www.bestfreewaredownload.com/software-search.html?keywords=conemu&amp;category_id=0" rel="nofollow"><img src="http://www.bestfreewaredownload.com/images/BFD_award5.png" alt="Best Freeware Download" border="0"></img></a> <a href="http://www.downloadtyphoon.com/software-search.html?keywords=conemu" rel="nofollow"><img src="http://www.downloadtyphoon.com/templates/downty/images/award_5.gif" alt="Download Typhoon" border="0"></img></a> <a href="http://www.windows7download.com/software-search.html?keywords=conemu" rel="nofollow"><img src="http://www.windows7download.com/img/awards/award_5.png" alt="Windows 7 Download" border="0"></img></a> <a href="http://www.bestvistadownloads.com/software-search.html?keywords=conemu" rel="nofollow"><img src="http://www.bestvistadownloads.com/templates/BVD/images/award_5.gif" alt="Best Vista Download" border="0"></img></a> </p>
 <p><a href="http://www.programosy.pl/program,conemu.html" rel="nofollow"><img src="http://www.programosy.pl/img/programosy_editorschoice.png" alt="programosy" border="0"></img></a> <a href="http://conemu.findmysoft.com/" rel="nofollow"><img src="http://www.findmysoft.com/ConEmu_award2.png" alt="FindMysoft.com"></img></a> </p>
