Add some breadcrumbs

--- a/en/FaqBoldItalic.html
+++ b/en/FaqBoldItalic.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/FaqBoldItalic.html
 
 title: "ConEmu | Bold, Italic, Underline"
+
+breadcrumbs:
+ - url: TableOfContents.html#tips-and-tweaks
+   title: Tips and Tweaks
 ---
 
 <!-- Content starts -->
