--- a/en/FaqPlainShell.html
+++ b/en/FaqPlainShell.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/FaqPlainShell.html
 
 title: "ConEmu | How to Run Shell Bare"
+
+breadcrumbs:
+ - url: TableOfContents.html#tips-and-tweaks
+   title: Tips and Tweaks
 ---
 
 <!-- Content starts -->
