--- a/en/PowershellPrompt.html
+++ b/en/PowershellPrompt.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/PowershellPrompt.html
 
 title: "ConEmu | Extend Powershell Prompt"
+
+breadcrumbs:
+ - url: TableOfContents.html#tips-and-tweaks
+   title: Tips and Tweaks
 ---
 
 <!-- Content starts -->
