--- a/en/ShellWorkDir.html
+++ b/en/ShellWorkDir.html
@@ -5,6 +5,10 @@ redirect_from:
  - /en/CygwinCurDir.html
 
 title: "ConEmu | Shell Working Directory"
+
+breadcrumbs:
+ - url: TableOfContents.html#tips-and-tweaks
+   title: Tips and Tweaks
 ---
 
 <!-- Content starts -->
