--- a/en/VimXterm.html
+++ b/en/VimXterm.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/VimXterm.html
 
 title: "ConEmu | Vim and Xterm-256"
+
+breadcrumbs:
+ - url: TableOfContents.html#tips-and-tweaks
+   title: Tips and Tweaks
 ---
 
 <!-- Content starts -->
