--- a/en/PromptAtTheBottom.html
+++ b/en/PromptAtTheBottom.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/PromptAtTheBottom.html
 
 title: "ConEmu | Hold Shell Prompt at the Bottom"
+
+breadcrumbs:
+ - url: TableOfContents.html#tips-and-tweaks
+   title: Tips and Tweaks
 ---
 
 <!-- Content starts -->
