--- a/en/SolarizedColors.html
+++ b/en/SolarizedColors.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/SolarizedColors.html
 
 title: "ConEmu | Solarized Colors"
+
+breadcrumbs:
+ - url: TableOfContents.html#tips-and-tweaks
+   title: Tips and Tweaks
 ---
 
 <!-- Content starts -->
