--- a/en/TaskBarBug.html
+++ b/en/TaskBarBug.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/TaskBarBug.html
 
 title: "ConEmu | TaskBar Bug"
+
+breadcrumbs:
+ - url: TableOfContents.html#tips-and-tweaks
+   title: Tips and Tweaks
 ---
 
 <!-- Content starts -->
