--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -31,6 +31,18 @@ or anything else, spreading the word for example.
 
 <!-- Content starts -->
 
+<h2 id="Build_150513">Build 150513</h2>
+<ul>
+	<li>Don't show [reg] or [xml] in Fast Configuration dialog because there is the storage location field. </li>
+	<li>gh#142: Win+Left/Right didn't snap window if it was maximized. </li>
+	<li>gh#139: If Quake was hidden when user presses Win key (Start menu), ConEmu was unexpectedly slided down after second Win press (after menu was hidden). </li>
+	<li>Garbage was shown sometimes while searching in Settings dialog. </li>
+	<li>gh#143: Add CygWin bash default tasks by checking registry (for new config). </li>
+	<li>RealConsole pause refactoring. </li>
+	<li>Execute RedrawWindow in the server process to avoid access violation. </li>
+</ul>
+
+
 <h2 id="Build_150504">Build 150504</h2>
 <ul>
 	<li>Jump list command was built erroneously if there was ‘-FontDir ...’ or some other switch. </li>
