Add some breadcrumbs

--- a/en/ConEmuClink.html
+++ b/en/ConEmuClink.html
@@ -5,6 +5,10 @@ redirect_from:
  - /ru/ConEmuClink.html
 
 title: "ConEmu | Clink - bash style completion for cmd.exe"
+
+breadcrumbs:
+ - url: TableOfContents.html#features
+   title: Features
 ---
 
 <!-- Content starts -->
