--- a/en/ExtendedConsole.html
+++ b/en/ExtendedConsole.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/ExtendedConsole.html
 
 title: "ConEmu | Far's ExtendedConsole"
+
+breadcrumbs:
+ - url: TableOfContents.html#features
+   title: Features
 ---
 
 <!-- Content starts -->
