--- a/en/FileLineDetector.html
+++ b/en/FileLineDetector.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/FileLineDetector.html
 
 title: "ConEmu | Hyperlinks and Errors Detector"
+
+breadcrumbs:
+ - url: TableOfContents.html#features
+   title: Features
 ---
 
 <!-- Content starts -->
