--- a/en/Progress.html
+++ b/en/Progress.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/Progress.html
 
 title: "ConEmu | Progress"
+
+breadcrumbs:
+ - url: TableOfContents.html#features
+   title: Features
 ---
 
 <!-- Content starts -->
