--- a/en/Windows7Taskbar.html
+++ b/en/Windows7Taskbar.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/Windows7Taskbar.html
 
 title: "ConEmu | Windows7 Taskbar"
+
+breadcrumbs:
+ - url: TableOfContents.html#features
+   title: Features
 ---
 
 <!-- Content starts -->
