--- a/en/Xterm256Colors.html
+++ b/en/Xterm256Colors.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/Xterm256Colors.html
 
 title: "ConEmu | Xterm-256 Colors"
+
+breadcrumbs:
+ - url: TableOfContents.html#features
+   title: Features
 ---
 
 <!-- Content starts -->
