--- a/en/Progress.html
+++ b/en/Progress.html
@@ -3,6 +3,8 @@ redirect_from: /ru/Progress.html
 
 title: "ConEmu | Progress"
 
+description: "ConEmu may detect current operation progress and show it on the Windows task bar button."
+
 breadcrumbs:
  - url: TableOfContents.html#features
    title: Features
