--- a/en/AppHelp.html
+++ b/en/AppHelp.html
@@ -2,6 +2,14 @@
 redirect_from: /ru/AppHelp.html
 
 title: "ConEmu | AppHelp Problems"
+
+breadcrumbs:
+ - url: TableOfContents.html#cygwin-and-msys
+   title: Cygwin and Msys
+
+readalso:
+ - url: CygwinHeap.html
+   title: Problems with Cygwin Heap
 ---
 
 <!-- Content starts -->
